various small fiddles

--- a/sigma.tex
+++ b/sigma.tex
@@ -107,7 +107,7 @@ We have defined \(X_E\) to have the formal topology induced by the compactly gen
 \end{proof}
 
 \begin{example}[{cf.\ \Cref{KtheoryConvertsTorsionToTorsion} and \Cref{KHomologyOfClassifyingSpace}}]\label{KtheoryOfClassifyingSpace}
-For a Morava \(K\)--theory \(K_\Gamma\) associated to a formal group \(\Gamma\) of finite height, we have seen that there is an exact sequence of Hopf algebras \[K_\Gamma^0(BS^1) \xrightarrow{[p^j]} K_\Gamma^0(BS^1) \to K_\Gamma^0(BS^1[p^j]),\] presenting \((BS^1[p^j])_K\) as the \(p^j\)--torsion formal subscheme \(BS^1_K[p^j]\).  The Hopf algebra calculation also holds in \(K\)--homology, where there is instead the exact sequence \[(K_\Gamma)_0 B(S^1[p^j]) \to (K_\Gamma)_0 BS^1 \xrightarrow{(-)^{\ast p^j}} (K_\Gamma)_0 BS^1\] presenting \((K_\Gamma)_0 B(S^1[p^j])\) as the \(p^j\)--order \(\ast\)--nilpotence in the middle Hopf algebra.  Applying \(\Sch\) to this last line covariantly converts this second statement about Hopf algebras to the corresponding statement above about the associated formal schemes---i.e., the behavior of the homology Hopf algebra is a covariant avatar of the behavior of the formal schemes.
+For a Morava \(K\)--theory \(K_\Gamma\) associated to a formal group \(\Gamma\) of finite height, we have seen that there is an exact sequence of Hopf algebras \[K_\Gamma^0(BS^1) \xrightarrow{\cdot [p^j](x)} K_\Gamma^0(BS^1) \to K_\Gamma^0(BS^1[p^j]),\] presenting \((BS^1[p^j])_K\) as the \(p^j\)--torsion formal subscheme \(BS^1_K[p^j]\).  The Hopf algebra calculation also holds in \(K\)--homology, where there is instead the exact sequence \[(K_\Gamma)_0 B(S^1[p^j]) \to (K_\Gamma)_0 BS^1 \xrightarrow{\frown [p^j](x)} (K_\Gamma)_0 BS^1\] which ultimately presents \((K_\Gamma)_0 B(S^1[p^j])\) as the \(p^j\)--order \(\ast\)--nilpotence in the middle Hopf algebra.  Applying \(\Sch\) to this last line covariantly converts this second statement about Hopf algebras to the corresponding statement above about the associated formal schemes---i.e., the behavior of the homology Hopf algebra is a covariant avatar of the behavior of the formal schemes.
 \end{example}
 
 The example above, where the space in question is an \(H\)--space, also spurs us to consider a certain ``wrong-way'' operation.  We have seen that the algebra structure of the \(K\)--cohomology of a space and the coalgebra structure of the \(K\)--homology of the same space contain equivalent data: they both give rise to the same formal scheme.  However, in the case of a commutative \(H\)--space, the \(K\)--homology and \(K\)--cohomology give \emph{commutative and cocommutative Hopf algebras}.  Hence, in addition to considering the coalgebraic formal scheme \(\Sch (K_\Gamma)_0 B(S^1[p^j])\), we can also consider the affine scheme \(\Spec (K_\Gamma)_0 B(S^1[p^j])\).  This, too, should contain identical information, and this is the subject of Cartier duality.
@@ -128,7 +128,7 @@ The \index{Dieudonn\'e module}Dieudonn\'e module of the Cartier dual of a formal
 \end{remark}
 
 \begin{remark}\label{TopologicalCartierDuality}
-\index{formal scheme!from a space}Cartier duality intertwines the homological and cohomological schemes assigned to a commutative \(H\)--space.  When such a commutative \(H\)--space \(X\) has free and even \(E\)--homology, there is an isomorphism \[D(\Spf E^0 X) = DX_E = \InternalHom{GroupSchemes}(X_E, \Gm) \cong \Spec E_0 X.\]
+\index{formal scheme!from a space}Cartier duality intertwines the homological and cohomological schemes assigned to a commutative \(H\)--space.  When such a commutative \(H\)--space \(X\) has free and even \(E\)--homology, there is an isomorphism\footnote{Some authors write \(X^E\) for this last scheme.  This is not unreasonable, but we make use of this construction so rarely that we will not reserve for it its own notation.} \[D(\Spf E^0 X) = DX_E = \InternalHom{GroupSchemes}(X_E, \Gm) \cong \Spec E_0 X.\]
 \end{remark}
 
 
@@ -227,7 +227,7 @@ Consider the element \(\beta^k \in kU_* = \Z[\beta]\).  The source of the induce
 
 The next space and Thom spectrum in the sequence are thus \(B\SU\) and \(M\SU\).  These are approachable using methods we have developed so far, and so we set their description as our goal for the remainder of this Lecture.  Our jumping off point for that story will be, again, a partial extension of the splitting principle.
 \begin{lemma}\label{SplittingPrincipleForBSU}
-Let \(X\) be a finite complex, and let \(\tilde V\co X \to BU\) classify a virtual vector bundle of rank \(0\) over \(X\).  Suppose that there is a factorization \(\tilde{\tilde V}\co X \to B\SU\) of \(\tilde V\) through \(B\SU\).  Then, there is a space \(f\co Y \to X\), where \(f_E\co Y_E \to X_E\) is finite and flat, as well as a collection of line bundles \(\sheaf H_j\), \(\sheaf H'_j\) expressing a \(B\SU\)--internal decomposition\index{splitting principle!for BSU@for \(B\SU\)} \[\tilde{\tilde V} = -\bigoplus_{j=1}^n (1 - \sheaf H_j)(1 - \sheaf H'_j).\]
+Let \(X\) be a finite complex, and let \(\tilde V\co X \to BU\) classify a virtual vector bundle of rank \(0\) over \(X\).  Suppose that we have selected a factorization \(\tilde{\tilde V}\co X \to B\SU\) of \(\tilde V\) through \(B\SU\).  Then, there is a space \(f\co Y \to X\), where \(f_E\co Y_E \to X_E\) is finite and flat, as well as a collection of line bundles \(\sheaf H_j\), \(\sheaf H'_j\) expressing a \(B\SU\)--internal decomposition\index{splitting principle!for BSU@for \(B\SU\)} \[\tilde{\tilde V} = -\bigoplus_{j=1}^n (1 - \sheaf H_j)(1 - \sheaf H'_j).\]
 \end{lemma}
 \begin{proof}
 Begin by using \Cref{OriginalSplittingPrinciple} on \(V\) to get an equality of \(BU\)--bundles \[f^* \tilde{\tilde V} = V' + \L_1 + \L_2 - n \cdot 1.\]  Adding \((1 - \L_1)(1 - \L_2)\) to both sides, this gives
@@ -249,7 +249,7 @@ There is an equivalence of \(\SU\)--bundles \[(1 - 1)(\L_2 - 1) \cong 0.\]  Corr
 \end{example}
 
 \begin{example}\label{TwoCocycleConditionForBSUBundles}
-There is another less obvious symmetry, inspired by our use of the product map \[kU^2(Y) \otimes kU^2(Y) \to kU^4(Y)\] in the course of the proof.  There is also a product map \[kU^2(Y) \otimes kU^0(Y) \otimes kU^2(Y) \to kU^4(Y).\]  Taking one of our splitting summands \((1 - \L_1)(1 - \L_2)\) and acting by some a bundle \(\sheaf H \in kU^0(Y)\) gives
+There is another less obvious symmetry, inspired by our use of the product map \[kU^2(Y) \otimes kU^2(Y) \to kU^4(Y)\] in the course of the proof.  There is also a product map \[kU^2(Y) \otimes kU^0(Y) \otimes kU^2(Y) \to kU^4(Y).\]  Taking one of our splitting summands \((1 - \L_1)(1 - \L_2)\) and acting by some bundle \(\sheaf H \in kU^0(Y)\) gives
 \begin{align*}
 (1 - \L_1)\sheaf H(1 - \L_2) & = (1 - \L_1)\sheaf H(1 - \L_2) \\
 (\sheaf H - \L_1 \sheaf H)(1 - \L_2) & = (1 - \L_1)(\sheaf H - \sheaf H \L_2) \\
@@ -262,7 +262,7 @@ This ``\(kU^0\)--linearity'' is sometimes called a \index{symmetric 2 cocycle@sy
 
 We would like to show that these observations suffice, as in the following version of \Cref{BUZTriumvirate} and \Cref{BUTriumvirate}:
 \begin{theorem}[{\cite[Theorem 2.50]{AHSTheoremOfTheCube}}]\label{BSUTriumvirate}
-The functor \[\{\Spec T \xrightarrow{u} \Spec E_0\} \to \left\{ \begin{array}{c} \text{trivializations of \(u^* \ThomSheaf{(1 - \L_1)(1 - \L_2)}\)} \\ \text{over \(u^* (\CP^\infty)^{\times 2}_E\) which are} \\ \text{symmetric, rigid, and \(kU^0\)--linear} \end{array} \right\}\] is isomorphic to the affine scheme \(\Spec E_0 M\SU\).  Moreover, the \(E_0\)--points of this scheme biject with ring spectrum maps \(M\SU \to E\).\index{orientation!MSU@\(M\SU\)}
+Take \(E\) to be even-periodic.  The functor \[\{\Spec T \xrightarrow{u} \Spec E_0\} \to \left\{ \begin{array}{c} \text{trivializations of \(u^* \ThomSheaf{(1 - \L_1)(1 - \L_2)}\)} \\ \text{over \(u^* (\CP^\infty)^{\times 2}_E\) which are} \\ \text{symmetric, rigid, and \(kU^0\)--linear} \end{array} \right\}\] is isomorphic to the affine scheme \(\Spec E_0 M\SU\).  Moreover, the \(E_0\)--points of this scheme biject with ring spectrum maps \(M\SU \to E\).\index{orientation!MSU@\(M\SU\)}
 \end{theorem}
 
 \noindent In pursuit of this, we will show rather manually that \(B\SU_E\) represents an object subject to exactly such symmetries, hence \(\Spec E_0 B\SU\) represents the scheme of such symmetric functions, and finally conclude that \(\Spec E_0 M\SU\) represents the scheme of such symmetric trivializations.  The place to begin is with a Serre spectral sequence:
@@ -273,7 +273,7 @@ E^0 B\SU \from E^0 BU \xleftarrow{c_1 \mapsfrom c_1} E^0 BU(1). \qedhere
 \popQED\]
 \end{lemma}
 
-\noindent An equivalent statement is that there is a short exact sequence of formal group schemes
+\noindent Equivalently, there is a short exact sequence of formal group schemes
 \begin{center}
 \begin{tikzcd}
 B\SU_E \arrow{r} \arrow[equal]{d} & BU_E \arrow{r}{B\det} \arrow[equal]{d} & BU(1)_E \arrow[equal]{d} \\
@@ -283,11 +283,11 @@ B\SU_E \arrow{r} \arrow[equal]{d} & BU_E \arrow{r}{B\det} \arrow[equal]{d} & BU(
 where the scheme ``\(\SDiv_0 \CP^\infty_E\)'' of \index{divisor!special}\textit{special divisors} is defined to parametrize those divisors which vanish under the summation map.  However, whereas the map \(BU(1)_E \to BU_E\) has an identifiable universal property---it presents \(BU_E\) as the universal formal group on the pointed curve \(BU(1)_E\)---the description of \(B\SU_E\) as a scheme of special divisors does not bear much immediate resemblance to a free object on the special divisor \((1 - [a])(1 - [b])\) classified by \[(\CP^\infty)^{\times 2}_E \xrightarrow{(1 - \L_1)(1 - \L_2)_E} B\SU_E \to BU_E = \Div_0 \CP^\infty_E.\]  Our task is thus exactly to justify this statement.
 
 \begin{definition}\label{DefinitionOfC2G}
-If it exists, let \(C_2 \G\) denote the symmetric square of \(\Div_0 \G\), thought of as a module over the ring scheme \(\Div \G\).  This scheme has the property that a formal group homomorphism \(\phi\co C_2 \G \to H\) is equivalent data to a symmetric function \(\psi\co \G \times \G \to H\) satisfying a rigidity condition (\(\psi(0, 0) = 0\)) and a \(2\)--cocycle condition as in \Cref{TwoCocycleConditionForBSUBundles}.\footnote{The short exact sequence \(0 \to I \to \Z[G] \to \Z \to 0\) gives a purely algebraic analogue of the short exact sequence \(0 \to \Div_0 \G \to \Div \G \to \underline{\Z} \to 0\).  The algebro-geometric results of this Lecture (in particular, \Cref{SDivModelsC2}) have direct analogues in the setting of group--rings, which the reader may find more instructive and concrete.}
+If it exists, let \(C_2 \G\) denote the symmetric square of \(\Div_0 \G\), thought of as a module over the ring scheme \(\Div \G\).  This scheme has the property that a formal group homomorphism \(\phi\co C_2 \G \to H\) is equivalent data to a symmetric function \(\psi\co \G \times \G \to H\) satisfying a rigidity condition (\(\psi(0, 0) = 0\)) and a \(2\)--cocycle condition as in \Cref{TwoCocycleConditionForBSUBundles}.
 \end{definition}
 
 \begin{theorem}[{Ando--Hopkins--Strickland, unpublished}]\label{SDivModelsC2}
-\(\SDiv_0 \G\) is a model for \(C_2 \G\).
+\(\SDiv_0 \G\) is a model for \(C_2 \G\).\footnote{The short exact sequence \(0 \to I \to \Z[G] \to \Z \to 0\) gives a purely algebraic analogue of the short exact sequence \(0 \to \Div_0 \G \to \Div \G \to \underline{\Z} \to 0\).  The algebro-geometric results of this Lecture (and this Theorem in particular) have direct analogues in the setting of group--rings, which the reader may find more instructive and concrete.}
 \end{theorem}
 \begin{proof}[Proof sketch]
 Consider the map
