--- a/cooperations.tex
+++ b/cooperations.tex
@@ -126,7 +126,7 @@ E^2_{*, *} \cong \Tor^{F_* \OS{E}{j}}_{*, *}(F_*, F_*) \Rightarrow F_* \OS{E}{j+
 
 That this spectral sequence is multiplicative for the \(\ast\)--product is useful enough, but the situation is actually much, much better than this:
 \begin{lemma}[{\cite[Equation 1.3]{ThomasonWilson}, \cite[Theorem 2.2]{RavenelWilsonKthyOfEMSpaces}}]\label{CircProductAndDifferentials}
-Suppose further that \(E\) is a ring spectrum, and denote by \(E^r_{*, *}(F_* \OS{E}{j})\) the spectral sequence considered above whose \(E^2\)--term is given bby \(\Tor\) over \(F_* \OS{E}{j}\).  There are maps \[E^r_{*, *}(F_* \OS{E}{j}) \otimes_{F_*} F_* \OS{E}{m} \to E^r_{*, *}(F_* \OS{E}{j+m})\] which converge to the map \[F_* \OS{E}{j+1} \otimes_{F_*} F_* \OS{E}{m} \xrightarrow{\circ} F_* \OS{E}{j+m+1}\] on the \(E^\infty\)--page and which satisfy
+Suppose further that \(E\) is a ring spectrum, and denote by \(E^r_{*, *}(F_* \OS{E}{j})\) the spectral sequence considered above whose \(E^2\)--term is given by \(\Tor\) over \(F_* \OS{E}{j}\).  There are maps \[E^r_{*, *}(F_* \OS{E}{j}) \otimes_{F_*} F_* \OS{E}{m} \to E^r_{*, *}(F_* \OS{E}{j+m})\] which converge to the map \[F_* \OS{E}{j+1} \otimes_{F_*} F_* \OS{E}{m} \xrightarrow{\circ} F_* \OS{E}{j+m+1}\] on the \(E^\infty\)--page and which satisfy
 \[
 \pushQED{\qed}
 d^r(x \circ y) = (d^r x) \circ y. \qedhere
