typo: fact -> factor

--- a/sigma.tex
+++ b/sigma.tex
@@ -870,7 +870,7 @@ We know that \(\sheaf O C^k(\G_a; \Gm)\) are all free \(\Z\)--modules of graded 
 
 Specialize, for the moment, to the case of \(k = 2\).  It will suffice to show that it is a power series ring modulo \(p\) for every prime \(p\).  Such graded connected finite-type Hopf algebras over \(\F_p\) were classified by Borel (and exposited by \index{Milnor--Moore}Milnor--Moore~\cite[Theorem 7.11]{MilnorMoore}) as either polynomial or truncated polynomial.  These two cases are distinguished by the \index{Frobenius}\textit{Frobenius} operation: the Frobenius on a polynomial ring is injective, whereas the Frobenius on a truncated polynomial ring is not.  It is therefore equivalent to show that the \index{Verschiebung}\emph{Verschiebung} on the original ring \(\sheaf O(C^2(\G_a; \Gm)) \otimes \F_p\) is \emph{surjective}.  Recalling the calculation \(c_n^p = c_{np}\) at the level of bivariate \(2\)--cocycles, we compute \[p^* a_n = a_{np}^p,\] and since \(F a_{np} = a_{np}^p\) and \(FV = p^*\), we learn \[V(a_{np}) = a_n.\]  Essentially the same proof handles the cases \(k = 1\) and \(k = 0\).
 
-The case \(k = 3\) requires a small modification, to cope with the two classes of trivariate \(2\)--cocycles.  On the polynomial tensor factor of \(\sheaf O(C^3(\G_a; \Gm))\) we can reuse the same Verschiebung argument to see that its dual Hopf algebra is polynomial.  For the other fact, the dual of the divided power tensor factor is, without any further argument, always a primitively generated polynomial algebra.
+The case \(k = 3\) requires a small modification, to cope with the two classes of trivariate \(2\)--cocycles.  On the polynomial tensor factor of \(\sheaf O(C^3(\G_a; \Gm))\) we can reuse the same Verschiebung argument to see that its dual Hopf algebra is polynomial.  For the other factor, the dual of the divided power tensor factor is, without any further argument, always a primitively generated polynomial algebra.
 \end{proof}
 
 \begin{theorem}[Ando--Hopkins--Strickland, unpublished]
